[project]
name = "bloodpressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.9",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
]
